--- a/test1.html
+++ b/test1.html
@@ -16,76 +16,28 @@
    <style>
         body,input { font-size: 9pt; }
         html { height: 100% }  
-        body { height: 100%; margin: 0px; padding: 0px }  
-
+        body { height: 100%; margin: 0px; padding: 0px } 
         #map {
-           margin: 40px;
-           height: 550px;
-           width: 550px;
-        }
-        .modalDialog {
-            position: fixed;
-            font-family: Arial, Helvetica, sans-serif;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background: rgba(0,0,0,0.8);
-            z-index: 99999;
-            opacity:0;
-            -webkit-transition: opacity 400ms ease-in;
-            -moz-transition: opacity 400ms ease-in;
-            transition: opacity 400ms ease-in;
-            pointer-events: none;
-        }
-
-        .modalDialog:target {
-            opacity:1;
-            pointer-events: auto;
-        }
-
-        .modalDialog > div {
-            width: 700px;
-            position: relative;
-            margin: 0.5% auto;
-            padding: 5px 20px 13px 20px;
-            border-radius: 10px;
-            background: #fff;
-            background: -moz-linear-gradient(#fff, #999);
-            background: -webkit-linear-gradient(#fff, #999);
-            background: -o-linear-gradient(#fff, #999);
-        }
-
-        .close {
-            background: #606061;
-            color: #FFFFFF;
-            line-height: 25px;
-            position: absolute;
-            right: -12px;
-            text-align: center;
-            top: -10px;
-            width: 24px;
-            text-decoration: none;
-            font-weight: bold;
-            -webkit-border-radius: 12px;
-            -moz-border-radius: 12px;
-            border-radius: 12px;
-            -moz-box-shadow: 1px 1px 3px #000;
-            -webkit-box-shadow: 1px 1px 3px #000;
-            box-shadow: 1px 1px 3px #000;
-            -webkit-transition: opacity 400ms ease-in;
-            -moz-transition: opacity 400ms ease-in;
-            transition: opacity 400ms ease-in;
-        }
-
-        .close:hover { background: #00d9ff; }         
+               margin: 40px;
+               height: 475px;
+               width: 475px;
+            }  
+          @media screen and (max-width: 600px){
+            #map {
+               margin: 40px;
+               height: 300px;
+               width: 300px;
+            } 
+          }
     </style>
     <!--map-->
+    <link href="css/test1.css" rel="stylesheet" type="text/css"><!--浮出的css-->
 
 	<link href="css/style2.css" rel="stylesheet" type="text/css">
     <title>Title</title>
 
     <!-- Bootstrap core CSS -->
+
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -152,16 +104,17 @@
             </div>
         </div>
         <div class="taipei">
-            <a href="#openModal"></a>
-            <div id="openModal" class="modalDialog">
+            <a href="#openModal1"></a>
+            <div id="openModal1" class="modalDialog">
                 <div>
                     <a href="#close" title="Close" class="close">X</a>
+                    <div>aaa</div>
                 </div>
             </div>
         </div>
         <div class="xinbei">
-            <a href="#openModal"></a>
-            <div id="openModal" class="modalDialog">
+            <a href="#openModal2"></a>
+            <div id="openModal2" class="modalDialog">
                 <div>
                     <a href="#close" title="Close" class="close">X</a>
                 </div>
@@ -227,7 +180,7 @@
           var secretMessages = ['This', 'is', 'the', 'secret', 'message'];
           var lngSpan = bounds.east - bounds.west;
           var latSpan = bounds.north - bounds.south;
-          for (var i = 0; i < secretMessages.length; ++i) {
+          for (var i = 0; i < 2/*secretMessages.length*/; ++i) {/*圖釘改這*/
             var marker = new google.maps.Marker({
               position: {
                 lat: bounds.south + latSpan * Math.random(),
