--- a/test1.html
+++ b/test1.html
@@ -11,7 +11,7 @@
 
      <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.js'></script><!--map-->
      <meta name="viewport" content="initial-scale=1.0, user-scalable=no" /><!--map-->   
-
+	 <script src="js/testmap.js" type="text/javascript"></script>
    <style>
         body,input { font-size: 9pt; }
         html { height: 100% }  
@@ -132,7 +132,6 @@
       </div>
     </nav>   
   
-  
   <div class="map">
   <div id="maplist" class="idTabs">
         <div class="keelung" >
@@ -152,7 +151,7 @@
                 </div>
             </div>
         </div>
-        <div class="xinbei">
+        <div class="xinbei" onclick="initMap(2);">
             <a href="#openModal"></a>
             <div id="openModal" class="modalDialog">
                 <div>
@@ -160,22 +159,132 @@
                 </div>
             </div>
         </div>
-        <div class="taoyuan"><a href="taoyuan.html"></a></div>
-        <div class="hsinchu"><a href="#map04"></a></div>
-        <div class="miaoli"><a href="#map05"></a></div>
-        <div class="taichung"><a href="#map06"></a></div>
-        <div class="changhua"><a href="#map07"></a></div>
-        <div class="nantou"><a href="#map08"></a></div>
-        <div class="yunlin"><a href="#map09"></a></div>
-        <div class="chiayi"><a href="#map10"></a></div>
-        <div class="tainan"><a href="#map11"></a></div>
-        <div class="kaohsiung"><a href="#map12"></a></div>
-        <div class="pingtung"><a href="#map13"></a></div>
-        <div class="yilan"><a href="#map14"></a></div>
-        <div class="hualien"><a href="#map15"></a></div>
-        <div class="taitung"><a href="#map16"></a></div>
-        <div class="penghu"><a href="#map17"></a></div>
-        <div class="kinmen"><a href="#map18"></a></div>
+        <div class="taoyuan" onclick="initMap(3);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="hsinchu" onclick="initMap(4);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                    </div>
+            </div>
+		</div>
+        <div class="miaoli" onclick="initMap(5);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="taichung" onclick="initMap(6);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="changhua" onclick="initMap(7);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div></div>
+        <div class="nantou" onclick="initMap(8);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="yunlin"  onclick="initMap(9);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="chiayi"  onclick="initMap(10);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="tainan" onclick="initMap(11);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="kaohsiung" onclick="initMap(12);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="pingtung" onclick="initMap(13);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="yilan" onclick="initMap(14);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="hualien" onclick="initMap(15);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div></div>
+        <div class="taitung" onclick="initMap(16);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="penghu" onclick="initMap(17);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
+        <div class="kinmen" onclick="initMap(18);">
+			<a href="#openModal" ></a>
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                </div>
+            </div>
+		</div>
         <div id="twmap" class="items">
     
   </map>
@@ -196,92 +305,6 @@
     <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 
     <!--map-->
-   <script>
-        function initMap(area) {
-          if(area==null){
-            area = 1;
-          }
-          //var area=0;
-          var n,e,w,s,t,g,start,end;
-          //local[]:n,s,e,w,t,g->string
-          //var nowPlace = local[area].split(',');
-          //n = nowPlace.[0];
-
-          if(area==0){
-              n = 15.15;
-              s = 10.05;
-              e = 121.85;
-              w = 121.68;
-              t = 25.07;
-              g = 121.39;
-          }
-          else if(area==1){
-              n = 25.15;
-              s = 25.05;
-              e = 121.75;
-              w = 121.58; 
-              t = 25.08;
-              g = 121.44;           
-          }
-
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 4,
-            center: {lat: t, lng: g }
-          });
-
-          var bounds = {
-            north: n,
-            south: s,
-            east: e,
-            west: w
-          };
-          // Display the area between the location southWest and northEast.
-          map.fitBounds(bounds);
-          // Add 5 markers to map at random locations.
-          // For each of these markers, give them a title with their index, and when
-          // they are clicked they should open an infowindow with text from a secret
-          // message.
-          var secretMessages = ['This', 'is', 'the', 'secret', 'message'];
-          var lngSpan = bounds.east - bounds.west;
-          var latSpan = bounds.north - bounds.south;
-          /*
-           for (var i = start; i <= end; ++i) {
-                var factoryDetail = factoryList[i].split(',');
-                var Flat = factoryDetail[0];
-                var Flng = factoryDetail[1];...
-
-                var marker = new google.maps.Marker({
-                    position: {
-                      lat: Flat,
-                      lng: Flng,
-                    },
-                    map: map
-                });
-            }
-          */
-          for (var i = 0; i < secretMessages.length; ++i) {
-            var marker = new google.maps.Marker({
-              position: {
-                lat: bounds.south + latSpan * Math.random(),
-                lng: bounds.west + lngSpan * Math.random()
-              },
-              map: map
-            });
-            attachSecretMessage(marker, secretMessages[i]);
-          }
-        }
-        // Attaches an info window to a marker with the provided message. When the
-        // marker is clicked, the info window will open with the secret message.
-        function attachSecretMessage(marker, secretMessage) {
-          var infowindow = new google.maps.InfoWindow({
-            content: //"<a href="+secretMessage+".html>123</a>"
-          });
-          marker.addListener('mouseover', function() {
-            infowindow.open(marker.get('map'), marker);
-          });
-        }
-       
-    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL6jufC2Qe61igD_cSxoxEx9E9JqOJJM0&callback=initMap&signed_in=true&libraries=places&sensor=false" async defer>
     </script><!--map-->
   </body>
