--- a/person.html
+++ b/person.html
@@ -7,41 +7,44 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-	<link rel="stylesheet" media="all" href="https://d3kjtz7uyul5bi.cloudfront.net/assets/application-69965045c910c69a67548a599c43b364a80f9b2aa0d70b7a9f9add3ad7a83641.css" />
-    <title>Title</title>
 
-    <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+    <title>個人頁面</title>
+	
+	<!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	  <script type='text/javascript' 
-            src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>  
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style>
-        body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}		   
+	 <script type='text/javascript' 
+            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />   
+	<link rel="stylesheet" media="all" href="https://d3kjtz7uyul5bi.cloudfront.net/assets/application-69965045c910c69a67548a599c43b364a80f9b2aa0d70b7a9f9add3ad7a83641.css" />
+	<style>
+		body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}
+		#o-wrapper {z-index:0;}
     </style>
   </head>
 
-  <body id="recipes_index" class="recipes index users">
+  <body>
 	<div class="navbar-wrapper">
       <div class="container">
+
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
@@ -58,11 +61,11 @@
 					<li class="active"><a href="location.html">位置</a></li>
 					<li><a href="login.html" id="sign">Log in</a></li> 
 					<li class="dropdown hide" id="name">
-						<a href="#" class="dropdown-toggle"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
+						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="person.html" id="person">person</a></li>
+							<li><a href="123.html" id="person">person</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="#" id="out">Log out</a></li>
+							<li><a id="out">Log out</a></li>
 						</ul>
 					</li>
 				</ul>		 
@@ -71,73 +74,50 @@
         </nav>
 
       </div>
-    </div>  
-
-	<div class="container">	
+    </div>	
+	
+ <div class="container">	
 	 <!--Dynamic Tabs-->
 	<div class="o-wrapper" id="o-wrapper">
 	
     <div class="row">
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 ">
         	<div class="sidebar">
 			<div class="inner-block widget">
 			<div class="author-box">
 				<div class="text-center">
-					<a rel="author" class="author" href="">
-						<img alt="er201024" class="avatar img-circle" src="https://d3kjtz7uyul5bi.cloudfront.net/assets/default/default_avatar-1f70d6bebb0559fd2233ee49343a8f1e847c2e8a7bf394f743962a2863c54f1d.png" width="80" height="80" />
-						<span itemprop="author" class="author">使用者</span>
+					<a rel="author" class="author" >
+						<img alt="er201024" class="avatar img-circle" id="authorP" src="https://d3kjtz7uyul5bi.cloudfront.net/assets/default/default_avatar-1f70d6bebb0559fd2233ee49343a8f1e847c2e8a7bf394f743962a2863c54f1d.png" width="80" height="80" />
+						<span itemprop="author" class="author" id="author">使用者</span>
 					</a>    
-				</div>
-				<ul class="stats-tabs clearfix">
-					<li>
-						<a href="">
-							<span>感想</span>0
+				</div>				
+				<ul class="stats-tabs clearfix" id ="Ucount">
+					<li >
+						<a id="Upost" onclick="getElementById('under').innerHTML='post';">
+							貼文
 						</a>        
 					</li>
 					<li>
-						<a href="">
-							<span>收藏</span>0
+						<a id="Ulike" onclick="getElementById('under').innerHTML='like';">
+							收藏
 						</a>        
-					</li>
+					</li>					
 					<li>
-						<a href="">
-							<span>粉絲</span>
-							<span
-							  id="followers-num"
-							  data-id="er201024"
-							  data-count="0"
-							>
-							  0
-						</span>
+						<a id="Urank" onclick="getElementById('under').innerHTML='rank';">
+							成就
 						</a>        
 					</li>
-					<li>
-						<a href="">
-							<span>訂閱</span>0
-						</a>        
-					</li>
-				</ul>
-				<span class='inline-action-box'></span>
-				<div class="desc">
-					<h3>關於我</h3>
-						<div class="user-url">
-							<a href="">example@gmail.com</a>
-						</div>
-				</div>  
-			</div>
-			</div>
-			</div>
-			
-
+				</ul> 				
+			</div>			
+			</div>			
+			</div>		
       </div>
-      <div class="col-xs-12 col-md-8">
+<!--	  
+      <div class="col-xs-12 ">
         <ul class="user-navi clearfix semantic-navigation" id="sub_navigation">
-			<li id="user-recipes" class="active"><a href=""><span>感想</span></a></li>
+			<li id="user-recipes" class="active"><a href=""><span>貼文</span></a></li>
 			<li id="user-favorites"><a href=""><span>收藏</span></a></li>
-			<li id="user-dishes"><a href=""><span>等級</span></a></li>
-
-			<li id="user-entries"><a href=""><span>參賽</span></a></li>
-			<li id="user-drafts"><a href=""><span>草稿</span></a></li>
+			<li id="user-dishes"><a href=""><span>成就</span></a></li>
 			</ul>
 
 			<div class="inner-block clearfix">
@@ -145,20 +125,54 @@
 				  <div class="row no-content">
 					<div class="col-xs-12 col-sm-10 col-lg-9">
 						<p>目前沒有任何新的感想和收藏喔，趕快去 <a href="/recipes/new?ref=users">發表新感想</a> 吧！</p>
-					  <img class="hidden-xs hidden-sm" src="https://d3kjtz7uyul5bi.cloudfront.net/assets/default/no-result-e1286176d2f7bde9306dcfb2c84977e8ec21232a9cb834b4df8b7b793b38598c.png" alt="No result" />
 					</div>
 				  </div>
 			  </div>
-			</div>
-		
+			</div>		
 	  </div>
-    
+-->   <div class="col-xs-12 ">
+        	<div class="sidebar">
+			<div class="inner-block widget">
+				<p id="under">目前沒有任何新的感想和收藏喔，趕快去發表新感想吧！</p>			
+			</div>			
+			</div>		
+      </div>
 	</div>
   </div>
-
-
 </div>
+
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script  src="js/sign.js"></script>
-</body>
+	<script type="text/javascript">	
+	function thehash(){
+		return location.hash;
+	}
+	(function(){  				
+		firebase.auth().onAuthStateChanged(firebaseUser =>{
+		var myhash = thehash().split('#');
+		var Ref = firebase.database().ref('user/' + myhash[1]);
+		Ref.on("value", function(snapshot) {
+				document.getElementById("author").innerHTML = snapshot.val().displayName;  
+				document.getElementById("authorP").src = snapshot.val().photo;
+			});
+		document.getElementById("Ucount").classList.add("hide");
+		
+		if(firebaseUser){		
+			var uid = firebase.auth().currentUser.uid;			
+			if(uid==myhash[1]){
+				document.getElementById("Ucount").classList.remove("hide");
+			}/*			
+*/		}
+		});		
+	}());	
+	</script>
+  </body>
 </html>
