--- a/location.html
+++ b/location.html
@@ -11,20 +11,20 @@
     <title>推薦景點</title>
 	
 	<!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -32,14 +32,14 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	 <script type='text/javascript' 
-            src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
+            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
     <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style>
-        body,input { font-size: 9pt; font-family:Microsoft JhengHei;padding-top: 70px;}		
+        body,input { font-size: 9pt; font-family:Microsoft JhengHei;padding-top: 100px;}		
         html { height: 100% }  
         body { height: 100%; margin: 0px; padding: 100px }  
-        #map_canvas { margin:0px auto; width:90%; height:400px; }     
+        #map_canvas { margin:0px auto; width:95%; height:400px; }     
 		@media (min-width: 750px) {
 			#map_canvas {width:700px; height:500px;}   
 		}
@@ -67,11 +67,11 @@
 					<li class="active"><a href="location.html">位置</a></li>
 					<li><a href="login.html" id="sign">Log in</a></li> 
 					<li class="dropdown hide" id="name">
-						<a href="#" class="dropdown-toggle"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
+						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="person.html" id="person">person</a></li>
+							<li><a href="123.html" id="person">person</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="#" id="out">Log out</a></li>
+							<li><a id="out">Log out</a></li>
 						</ul>
 					</li>
 				</ul>		 
@@ -111,9 +111,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script  src="js/sign.js"></script>
   </body>
