--- a/info.html
+++ b/info.html
@@ -11,36 +11,31 @@
     <title>手信坊創意和菓子文化館</title>
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
-  
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
-
+    <!--box-->
+     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+     <!-- end-->
       <link rel="stylesheet" href="css/block_style.css">
-    <style>
-        label, input { display:block; }
-        input.text { margin-bottom:12px; width:95%; padding: .4em; }
-        fieldset { padding:0; border:0; margin-top:25px; }
-        h1 { font-size: 1.2em; margin: .6em 0; }
-        div#users-contain { width: 350px; margin: 20px 0; }
-        .ui-dialog .ui-state-error { padding: .3em; }
-        .validateTips { border: 1px solid transparent; padding: 0.3em; }
-    </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -48,7 +43,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	 <script type='text/javascript' 
-            src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script> 
+            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script> 
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style>
@@ -122,51 +117,18 @@
                 <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享</button>
               </div>
               <div class="btn-group" role="group" id="add_a">
-                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增評論</button>
+                  <button type="button" class="btn btn-default" id="create_article"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增評論</button>
               </div>
             </div>
-            <div id="add_a" title="新增評論">
-              <p class="validateTips">All form fields are required.</p>
-
-              <form>
-                <fieldset>
-                  <label for="name">Name</label>
-                  <input type="text" name="name" id="name" value="Jane Smith" class="text ui-widget-content ui-corner-all">
-                  <label for="email">Email</label>
-                  <input type="text" name="email" id="email" value="jane@smith.com" class="text ui-widget-content ui-corner-all">
-                  <label for="password">Password</label>
-                  <input type="password" name="password" id="password" value="xxxxxxx" class="text ui-widget-content ui-corner-all">
-
-                  <!-- Allow form submission with keyboard without duplicating the dialog button -->
-                  <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-                </fieldset>
-              </form>
-            </div>	 
-            </div>
-        </div>  
-      <div class="card-container">
-              <div class="card">
-                <div class="card-image"></div>
-                <div class="card-info">
-                  <div class="card-title">Title</div>
-                  <div class="card-detail"></div>
-                </div>
-                <div class="card-social">
-                <ul>
-                  <li><i class="fa fa-comment-o" aria-hidden="true"></i>
-            </li>
-                  <li><i class="fa fa-heart-o" aria-hidden="true"></i></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="card">
-                  <img src="images/t1.jpg" class="card-image">
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/t1.jpg" class="card-image">
                     <div class="card-info">
-                      <div class="card-title">Title</div>
-                      <div class="card-detail">
-                      </div>
+                        <div class="card-title">Title</div>
+                        <div class="card-detail">
+                        </div>
                     </div>
-                      <div class="card-social">
+                    <div class="card-social">
                         <ul>
                             <li><i class="fa fa-comment-o" aria-hidden="true"></i>
                             </li>
@@ -174,40 +136,73 @@
                             </li>
                         </ul>
                     </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-image"></div>
-                    <div class="card-info">
-                      <div class="card-title">Title</div>
-                      <div class="card-detail"></div>
-                    </div>
-                    <div class="card-social">
-                    <ul>
-                        <li><a href="database.html"><i class="fa fa-comment-o" aria-hidden="true"></i></a>
-                        </li>
-                      <li><i class="fa fa-heart-o" aria-hidden="true"></i>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
                 </div>
-
-    </div> <!-- /container -->
-    
-    
-    <!--<div class="container">-->        
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <p>&copy; 2016 Company, Inc.</p>
     </footer>
+    </div> <!-- /container -->
+    <!--<div class="container">-->        
+    <!--<div id="article_box">
+        <ul>
+            <li>標題<input type="text" id="title"></li>
+            <li>
+                <span class="btn btn-default btn-file btn-lg btn-block">
+                    Browse <input type="file" id="file">
+                </span>
+            </li>
+            <li>內容</li>
+            <textarea cols="25" rows="5" id="words" val=""></textarea>
+        </ul>
+      </div>
+      <div id="msgbox1" title="訊息">
+    </div> 
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $("#create_article").button();
+                $('#create_article').click(function(){
+                    $('#article_box').dialog('open');
+	            });
+                var opt={autoOpen: false,
+                    buttons: {"確定": function() {$(this).dialog("close");}}
+                };
+                $("#msgbox1").dialog(opt);
+                var do_ok=function() {
+                    var f=$("#title").val(); //取得資料
+                    var c=$("#words").val(); //取得資料
+                    $("#msgbox1").html(f+ "<br>" + c);
+                    $("#msgbox1").dialog("open");
+                    $(this).dialog("close");
+                    }
+                var opt={autoOpen: false,
+                    title: "新增討論",
+                    buttons: [{
+                        text: "送出",
+                        id: "postWrite",
+                        click:do_ok
+                    },
+                    {
+                        text: "取消",
+                        id: "cancel",
+                        click:function() {$(this).dialog("close");}
+                    }]
+                };
+                $("#article_box").dialog(opt);
+            });
+        </script> -->
     <!--  </div>-->
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js'></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
     <script>
        $(function(){
         $('.coverflow').css('max-width',$('.coverflow img').width());
@@ -218,5 +213,7 @@
     </script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script src="js/sign.js"></script>
+	<script type="text/javaScript" src="js/create_article.js"></script>
+    <script type="text/javascript" src="js/post.js"></script>
   </body>
 </html>
