修改上面(完成)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -78,7 +78,9 @@
 
   <link href="css/style2.css" rel="stylesheet" type="text/css">
     <title>Title</title>
-
+	<!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+	
     <!-- Bootstrap core CSS -->
     <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -87,7 +89,11 @@
 
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-
+	
+	<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+	
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -103,42 +109,44 @@
    <script type='text/javascript' 
             src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style>
-        body,input { padding-top: 70px;font-size: 9pt; font-family:Microsoft JhengHei;}      
+    <link rel="stylesheet" media="all" href="https://d3kjtz7uyul5bi.cloudfront.net/assets/application-69965045c910c69a67548a599c43b364a80f9b2aa0d70b7a9f9add3ad7a83641.css" />
+	<style>
+      	body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}
+		#o-wrapper {z-index:0;}
     </style>
   </head>
 
   <body>
+  <div class="navbar-wrapper">
     <div class="container">
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">LOGO</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">          
-          <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="location.html">位置</a></li>
-            <li><a href="login.html" id="sign">Log in</a></li> 
-          <li class="dropdown hide" id="name">
-            <a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="123.html" id="person">person</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a id="out">Log out</a></li>
-            </ul>
-          </li>
-          </ul>    
-        </div><!--/.nav-collapse -->
 
-      </div>
-    </nav>   
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html">LOGO</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">          
+				<ul class="nav navbar-nav navbar-right">
+					<li class="active"><a href="location.html">位置</a></li>
+					<li><a href="login.html" id="sign">Log in</a></li> 
+					<li class="dropdown hide" id="name">
+						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="123.html" id="person">person</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a id="out">Log out</a></li>
+						</ul>
+					</li>
+				</ul>		 
+			</div>
+          </div>
+        </nav>
   
   
   <div class="map">
@@ -215,6 +223,7 @@
     
     
     </div> <!-- /container -->
+	</div>
    
   <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -229,6 +238,5 @@
    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL6jufC2Qe61igD_cSxoxEx9E9JqOJJM0&callback=initMap&signed_in=true&libraries=places&sensor=false" async defer>
     </script><!--map-->
-    <script  src="js/sign.js"></script>
   </body>
 </html>
