firebase js include

--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
     <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+    <script  src="js/sign.js"></script>
     <!--map-->
    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL6jufC2Qe61igD_cSxoxEx9E9JqOJJM0&callback=initMap&signed_in=true&libraries=places&sensor=false" async defer>
